--- a/src/1597_LandingClient/package.json
+++ b/src/1597_LandingClient/package.json
@@ -18,52 +18,52 @@
   ],
   "license": "",
   "dependencies": {
-    "babel-polyfill": "^6.20.0",
-    "leaflet": "^1.1.0",
-    "prop-types": "^15.5.10",
+    "babel-polyfill": "^6.26.0",
+    "leaflet": "^1.3.3",
+    "prop-types": "^15.6.2",
     "ramda": "^0.23.0",
-    "react": "^15.4.2",
+    "react": "^15.6.2",
     "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-leaflet": "^1.4.0",
+    "react-dom": "^15.6.2",
+    "react-hot-loader": "^3.1.3",
+    "react-leaflet": "^1.9.1",
     "react-leaflet-geojson-cluster": "^0.1.8",
-    "react-redux": "^5.0.2",
-    "react-router": "^3.0.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^3.2.1",
     "react-router-redux": "^4.0.6",
-    "redux": "^3.6.0",
-    "redux-persist": "^4.3.0",
+    "redux": "^3.7.2",
+    "redux-persist": "^4.10.2",
     "redux-saga": "^0.14.3",
-    "redux-thunk": "^2.2.0",
+    "redux-thunk": "^2.3.0",
     "turf": "^3.0.14",
     "turf-center": "latest",
-    "webpack": "^2.2.1"
+    "webpack": "^2.7.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.2.10",
-    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babelify": "^7.3.0",
-    "browserify": "^14.0.0",
+    "browserify": "^14.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "isomorphic-fetch": "^2.2.1",
-    "nock": "^9.0.4",
-    "redux-mock-store": "^1.2.2",
-    "serve": "^5.1.4",
+    "nock": "^9.4.2",
+    "redux-mock-store": "^1.5.3",
+    "serve": "^9.3.0",
     "style-loader": "^0.13.1",
     "uglifyify": "^3.0.4",
-    "watchify": "^3.9.0",
-    "webpack-dev-server": "^2.5.1"
+    "watchify": "^3.11.0",
+    "webpack-dev-server": "^2.11.2"
   }
 }
